# [[file:magman.note::66f2d490][66f2d490]]
[package]
name = "magman"
version = "0.0.13"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
rand = "0.8"
csv = "1.1"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.5"
pager = "0.16"
lazy_static = "1.3"
structopt = "0.3"
spdkit = {version = "0.0.18"}
gut = {version="0.1", package="gchemol-gut"}
gosh-db = {version = "0.0.8", package="gosh-database"}

[dev-dependencies]
tempfile = "3.3"
# 66f2d490 ends here
