# [[file:magman.note::66f2d490][66f2d490]]
[package]
name = "magman"
version = "0.0.19"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
rand = "0.8"
csv = "1.1"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.5"
pager = "0.16"
lazy_static = "1.3"
spdkit = {version = "0.0.19"}
gut = {version="0.2", package="gchemol-gut"}
gosh = { version = "=0.0.30", features=["adhoc"] }
gchemol-parser = {version = "0.3"}
# remote runner
clap = { version = "3.0.10", features = ["derive"] }
tempfile = "3.3"

[dev-dependencies]

[features]
adhoc = [] # for local development
# 66f2d490 ends here
